# Emberwake

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  NOTICE  PERFORMANCE.md  QUICKSTART_WALKTHROUGH.md  README.md  SECURITY.md  SECURITY_VERIFICATION.md  SPEC_STATE.md  build-multiarch.sh  ci.yml  deny.toml  docker-compose.yml  public-api.yaml  quickstart.md  release.yml  research.md  server-functions.md  tasks.md
.docker/: Dockerfile
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
benches/: seed_benchmark.sh
crates/: AGENTS.md
crates/app/: Cargo.toml
crates/app/src/: error.rs  lib.rs
crates/app/src/components/: mod.rs  navbar.rs
crates/app/src/components/auth/: account_page.rs  admin_page.rs  login_page.rs  mod.rs  setup_page.rs
crates/app/src/components/dashboard/: mod.rs  status_tile.rs  weather_widget.rs
crates/app/src/components/editors/: mod.rs
crates/app/src/components/search/: fuzzy.rs  mod.rs
crates/app/src/components/settings/: mod.rs  settings_page.rs
crates/app/src/domain/: mod.rs
crates/app/src/server/: auth.rs  auth_helper.rs  auth_queries.rs  content_queries.rs  content_read.rs  content_write.rs  content_write_queries.rs  discovery.rs  export_queries.rs  extended_auth.rs  extended_auth_queries.rs  import_export.rs  mod.rs  monitor_queries.rs  monitor_read.rs  settings.rs  settings_queries.rs  settings_read.rs  weather_queries.rs  weather_read.rs
crates/app/src/server/importer/: html.rs  json.rs  mod.rs  opml.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: audit.rs  config.rs  lib.rs  main.rs  public_api.rs  state.rs  telemetry.rs
crates/server/src/auth/: api_token.rs  mod.rs  oidc.rs  webauthn.rs
crates/server/src/db/: backup.rs  mod.rs  pool.rs  repository.rs
crates/server/src/integrations/: docker.rs  kubernetes.rs  labels.rs  mod.rs  weather.rs
crates/server/src/monitor/: mod.rs  scheduler.rs
crates/server/src/security/: headers.rs  mod.rs  rate_limit.rs
crates/server/src/sse/: handler.rs  mod.rs
crates/server/tests/: foundational.rs
crates/server/tests/common/: mod.rs
crates/server/tests/integration/: content_crud.rs  discovery.rs  export_import.rs  monitor.rs  oidc.rs  sse.rs  ssr_dashboard.rs  ssr_theme.rs  weather.rs  webauthn.rs
crates/server/tests/server_fn/: api_token.rs  application.rs  auth.rs  authz.rs  content_write.rs  csrf.rs  dashboard.rs  dashboard_settings.rs  settings.rs
e2e/: Cargo.toml  README.md
e2e/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: import_html.rs  import_json.rs  import_opml.rs
migrations/: 000001_initial.sql  000002_add_csrf_token.sql  000003_external_identity_approved.sql  000004_add_restricted_visibility.sql  000005_add_applications.sql
specs/001-greenfield/: AGENTS.md  data-model.md  plan.md  research.md  security.md  spec.md  tasks.md
specs/001-greenfield/contracts/: AGENTS.md  server-functions.md
style/: main.css
