[workspace]
members = ["crates/app", "crates/frontend", "crates/server"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
leptos = { version = "0.8.19", features = ["nonce"] }
leptos_axum = "0.8.9"
leptos_router = "0.8.13"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "migrate"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.3", features = ["v7", "serde", "js"] }
tracing = "0.1.44"
thiserror = "2.0.18"
getrandom = { version = "0.4", features = ["wasm_js"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
tower-http = { version = "0.6", features = ["trace", "set-header"] }
tower_governor = "0.8"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
garde = { version = "0.20", features = ["derive", "url"] }
argon2 = "0.5"
prometheus = "0.13"
leptos_meta = "0.8"
governor = "0.10"
openidconnect = { version = "4.0", default-features = false, features = ["reqwest", "rustls-tls"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-core = "0.5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
subtle = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
bollard = { version = "0.18", default-features = false, features = ["pipe", "http"] }
kube = { version = "0.99", default-features = false, features = ["client", "runtime", "rustls-tls"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
scraper = { version = "0.22", default-features = false }
quick-xml = "0.37"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["http-proto", "reqwest-client", "trace"] }

[[workspace.metadata.leptos]]
name = "emberwake"
bin-package = "server"
lib-package = "app"
output-name = "emberwake"
site-addr = "0.0.0.0:5005"
site-root = "target/site"
site-pkg-dir = "pkg"
hash-files = true
style-file = "style/main.css"
lib-features = ["hydrate"]
bin-features = ["ssr"]
bin-exe-name = "emberwake"
