[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
getrandom = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
]
hydrate = [
    "leptos/hydrate",
]
