[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
getrandom = { workspace = true }
chrono = { workspace = true }
garde = { workspace = true }
sqlx = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
web-sys = { version = "0.3", features = ["Window", "Location", "EventSource", "MessageEvent", "Event", "Navigator", "CredentialsContainer", "CredentialCreationOptions", "Credential", "PublicKeyCredential", "AuthenticatorResponse", "AuthenticatorAttestationResponse", "Storage"] }
wasm-bindgen = { version = "0.2", optional = true }
webauthn-rs = { workspace = true, optional = true }
scraper = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
    "dep:sqlx",
    "dep:leptos_axum",
    "dep:axum",
    "dep:argon2",
    "dep:tracing",
    "dep:hmac",
    "dep:sha2",
    "dep:base64",
    "dep:webauthn-rs",
    "dep:scraper",
    "dep:quick-xml",
    "dep:tokio",
]
hydrate = [
    "dep:wasm-bindgen",
    "dep:base64",
    "leptos/hydrate",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
